--- a/src/src/components/InventoryFastItem/style.scss
+++ b/src/src/components/InventoryFastItem/style.scss
@@ -1,6 +1,5 @@
-// .inventoryItem {
-//   .item {
-//     width: 50px;
-//     height: 50px;
-//   }
-// }
+.keybind {
+  text-shadow: 0 0 2px #4dc3f7, 0 0 110px #4dc3f7, 0 0 1px #4dc3f7,
+    0 0 22px #4dc3f7, 0 0 22px #4dc3f7, 0 0 2px #4dc3f7, 0 0 2px #4dc3f7,
+    0 0 5px #4dc3f7;
+}
