--- a/src/src/components/InventoryInput/style.scss
+++ b/src/src/components/InventoryInput/style.scss
@@ -2,3 +2,7 @@ input.ant-input-number-input {
   height: 40px;
   @apply text-center appearance-none;
 }
+
+.ant-input-number-handler-wrap {
+  @apply hidden;
+}
