--- a/src/src/style.scss
+++ b/src/src/style.scss
@@ -4,7 +4,8 @@
   left: 16.5%;
 }
 
-.active-drop {
+.active-drop,
+.hover-drop:hover {
   box-shadow: 0 0 4px #4d92b1, 0 0 1px #4d92b1, 0 0 9px #4d92b1, 0 0 4px #4d92b1,
     0 0 4px #4d92b1, 0 0 9px #4d92b1, 0 0 10px #4d92b1, 0 0 10px #4d92b1;
 }
