--- a/src/src/components/InventoryItem/style.scss
+++ b/src/src/components/InventoryItem/style.scss
@@ -1,7 +1,11 @@
 .weapon-bar {
   background-color: green;
-  width: 5%;
+  width: 4%;
   position: absolute;
   bottom: 0;
   left: 0;
+}
+
+.copy ~ div {
+  transform: none !important;
 }
