update fast items & other things

--- a/src/src/components/InventoryProgress/style.scss
+++ b/src/src/components/InventoryProgress/style.scss
@@ -17,7 +17,7 @@
     @apply absolute top-0 left-0;
     @apply rounded-lg bg-gta-blue-400;
     height: 35px;
-    width: 40%;
+    // width: 40%;
     z-index: 1;
   }
 }
